<resources>
    <string name="app_name">Car Loan Calulator</string>
    <string name="title">Car Loan Calculator</string>
    <string name="CarPrice">Car Price</string>
    <string name="DownPayment">Down Payment</string>
    <string name="LoanPeriod">Loan Period</string>
    <string name="InterestRate">Interest Rate (%)</string>
    <string name="CarLoan">Car Loan</string>
    <string name="Interest">Interest</string>
    <string name="MonthlyPayment">Monthly Payment</string>
    <string name="Calc">Calculate</string>
    <string name="Reset">Reset</string>
</resources>
